[metadata]
name = cloud_console_common
version = 0.0.1
author = Nico Coetzee
author_email = nicc777@gmail.com
description = Common library for use by cloud-console main application and plugins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicc777/cloud-console-common
project_urls =
    Bug Tracker = https://github.com/nicc777/cloud-console-common/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
